# image-bot

./: .gitignore  Cargo.toml  package-lock.json  package.json  serverless.yml
.devcontainer/: devcontainer.json  postCreate.sh
migrations/: 20230811225700_images.sql
src/: handler.rs  image_repository.rs  main.rs  models.rs
