[package]
name = "image-bot"
version = "0.1.0"
edition = "2021"
authors = ["Nikita Melkozerov <n.melkozerov@gmail.com>"]
description = "A telegram bot that shows random pictures and allows you to rate them"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.28", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
sqlx = { version = "0.7", features = [ "macros", "runtime-tokio", "sqlite" ] }
